--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title></head>
-    <script src="./playround.js"></script>
-<body>
+    <link rel="stylesheet" href="./css/styles.css">
+    
+<body class="bod">
+    <div class="container">
+        <button class="btn btn-large">Rock</button>
+        <button class="btn btn-large">Paper</button>
+        <button class="btn btn-large">Scissors</button>
+    </div>
 
+    <div class="results">
+        
+
+    </div>
+
+
+    <script src="./playround.js"></script>
 </body>
 </html>
